<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/content_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/holo_blue_dark"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:padding="24dp"
            android:paddingTop="16dp">

            <LinearLayout
                android:id="@+id/server_fingerprints"
                style="@style/Widget.CardContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp">

            </LinearLayout>

            <Spinner
                android:id="@+id/network_interface_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/select_network_interface"
                android:background="@color/colorCardView"
                android:popupBackground="@color/colorAccent"
                android:textColor="@android:color/holo_blue_dark"
                android:spinnerMode="dropdown" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="@string/port_label_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/port_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/default_port_value"
                    android:inputType="number"
                    android:maxLines="1"
                    android:background="@color/colorCardView"
                    android:text="@string/default_port_value" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/user_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="@string/default_user_value">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/default_user_value"
                    android:inputType="text"
                    android:maxLines="1"
                    android:background="@color/colorCardView"
                    android:text="@string/default_user_value" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="@string/default_password_value"
                app:passwordToggleDrawable="@drawable/show_password_selector"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/default_password_value"
                    android:inputType="textPassword"
                    android:background="@color/colorCardView"
                    android:maxLines="1"
                    android:text="@string/default_password_value" />
            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:id="@+id/bottom"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/generate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:onClick="generateClicked"
                    android:text="@string/generate"
                    android:textColor="@color/design_default_color_secondary" />
            </RelativeLayout>


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/start_stop_action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:clickable="true"
                android:contentDescription="@string/starts_stops_server"
                android:focusable="true"
                android:onClick="startStopClicked"
                android:src="@drawable/play_arrow_black_24dp"
                app:backgroundTint="?attr/actionModeSplitBackground"
                app:layout_anchorGravity="bottom|right|end" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/readonly_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/read_only"
                app:useMaterialThemeColors="true" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/password_authentication_enabled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="passwordSwitchClicked"
                android:text="@string/password_authentication_enabled"
                app:useMaterialThemeColors="true" />

            <ImageView
                android:id="@+id/key_based_authentication"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:contentDescription="@string/shows_key_based_authentication_enabled_disabled"
                android:onClick="keyClicked" />

            <Spinner
                android:id="@+id/sftp_paths"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/sftp_root_path"
                android:textColor="@android:color/holo_blue_dark" />

        </LinearLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
